add inline comments

--- a/sites/modules/@apostrophecms/home-page/views/page.html
+++ b/sites/modules/@apostrophecms/home-page/views/page.html
@@ -1,5 +1,10 @@
 {% extends 'layout.html' %}
 
+{#
+  TODO: The markup below is for demonstration purposes only
+  Modify this template to meet your specific needs
+#}
+
 {% block main %}
   <section class="page-home">
     {% if data.theme === 'demo' %}
