Starts modifying readme and associated files

--- a/sites/modules/@apostrophecms/template/views/outerLayout.html
+++ b/sites/modules/@apostrophecms/template/views/outerLayout.html
@@ -8,4 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?{{ data.global.fontFamilyParameters | safe }}&display=swap" rel="stylesheet">
   {% endif %}
+  {# Add a favicon to the page from the /public/images folder #}
+  {# <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> #}
 {% endblock %}
