--- a/sites/views/layout.html
+++ b/sites/views/layout.html
@@ -11,6 +11,15 @@
     {{ apos.log('Looks like you forgot to override the title block in a template that does not have access to an Apostrophe page or piece.') }}
   {% endif %}
 {% endblock %}
+{% block standardHead %}
+  {# Use standardHead and super() rather than extraHead to ensure palette injects after it #}
+  {{ super() }}
+  {% if data.global.googleFontScript and data.global.fontFamilies.length %}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?{{ data.global.fontFamilyParameters | safe }}&display=swap" rel="stylesheet">
+  {% endif %}
+{% endblock %}
 
 {% block beforeMain %}
 <div class="wrapper">
